--- a/css/style.css
+++ b/css/style.css
@@ -442,6 +442,10 @@ section{
     #search-btn{
         display: none
     }
+
+    #login-btn{
+        display: none;
+    }
 }
 
 @media (max-width:768px){
